Update Connect menu items to point to contact form on all pages

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <a href="bouy-os.html">Buoy</a>
           </div>
         </div>
-        <a href="index.html#connect">Connect</a>
+        <a href="contact.html">Connect</a>
         <a href="https://darksoil.studio/p2p-shipyard/" class="dev-btn" target="_blank" rel="noopener" title="Developer Documentation">Dev</a>
         <custom-social-link name="Github" url="https://github.com/darksoil-studio"></custom-social-link>
         <custom-social-link name="Substack" url="https://darksoil.substack.com"></custom-social-link>
@@ -41,7 +41,7 @@
           <a href="https://darksoil.studio/p2p-shipyard">p2p Shipyard</a>
           <a href="corri.html">Corri AI</a>
           <a href="bouy-os.html">Buoy</a>
-          <a href="index.html#connect">Connect</a>
+          <a href="contact.html">Connect</a>
           <a href="https://darksoil.studio/p2p-shipyard/" class="dev-btn" target="_blank" rel="noopener" title="Developer Documentation">Dev</a>
         </nav>
       </div>
