--- a/roadmap.html
+++ b/roadmap.html
@@ -31,7 +31,7 @@
         <a href="https://darksoil.studio/p2p-shipyard">p2p Shipyard</a>
         <a href="bouy-os.html">Bouy OS</a>
         <a href="roadmap.html">Roadmap</a>
-        <a href="index.htmlindex.html#connect">Connect</a>
+        <a href="contact.html">Connect</a>
       </div>
     </header>
 
