Remove hello@darksoil.studio email address and replace with contact form links

--- a/hc-intro-old/index.html
+++ b/hc-intro-old/index.html
@@ -130,7 +130,7 @@
               <p>Group size: <b>12</b><br />
               <p>Price:      <b>$2000</b><br /> -->
               <br />
-              <p>We recognize that the tech space is systemically inequitable so we have some bursary available for participants from systemically underrepresented groups. If this is you, please <a href="mailto:hello@darksoil.studio">reach out</a>.</p>
+              <p>We recognize that the tech space is systemically inequitable so we have some bursary available for participants from systemically underrepresented groups. If this is you, please <a href="../contact.html">reach out</a>.</p>
               </p>
            
 
