--- a/index.html
+++ b/index.html
@@ -142,10 +142,10 @@
     </rocket-content-area>
 
     <rocket-content-area>
-        <h2 id="connect">Connect</h2>
-        <p>
-          Contact us at: <a href="mailto:hello@darksoil.studio">hello@darksoil.studio</a>
-        </p>
+              <h2 id="connect">Connect</h2>
+      <p>
+        Get in touch with us through our <a href="contact.html">contact form</a>.
+      </p>
         <div class="custom-social-links">
           <custom-social-link name="OpenCollective" url="https://opencollective.com/darksoil"></custom-social-link>
           <custom-social-link name="Github" url="https://github.com/darksoil-studio"></custom-social-link>
