Update website layout and content: reorder projects, remove tenets, update menu structure, and improve project cards

--- a/corri.html
+++ b/corri.html
@@ -17,32 +17,40 @@
         <span></span>
       </button>
       <nav class="menu-links">
-        <a href="index.html">Home</a>
-        <div class="dropdown">
-          <a href="#" class="dropdown-toggle">Projects ▾</a>
-          <div class="dropdown-menu">
-            <a href="dash-chat.html">Dash Chat</a>
-            <a href="https://darksoil.studio/p2p-shipyard">p2p Shipyard</a>
-            <a href="corri.html">Corri AI</a>
-            <a href="bouy-os.html">Buoy</a>
-          </div>
+        <div class="menu-left">
+          <a href="index.html" class="home-link">darksoil studio</a>
         </div>
-        <a href="contact.html">Connect</a>
-        <a href="https://darksoil.studio/p2p-shipyard/" class="dev-btn" target="_blank" rel="noopener" title="Developer Documentation">Dev</a>
-        <custom-social-link name="Github" url="https://github.com/darksoil-studio"></custom-social-link>
-        <custom-social-link name="Substack" url="https://darksoil.substack.com"></custom-social-link>
-        <custom-social-link name="YouTube" url="https://www.youtube.com/@darksoilstudio"></custom-social-link>
+        <div class="menu-right">
+          <div class="dropdown">
+            <a href="#" class="dropdown-toggle">Projects ▾</a>
+            <div class="dropdown-menu">
+              <a href="dash-chat.html">Dash Chat</a>
+              <a href="corri.html">Corri AI</a>
+              <a href="https://darksoil.studio/p2p-shipyard">p2p Shipyard</a>
+              <a href="bouy-os.html">Buoy</a>
+            </div>
+          </div>
+          <a href="contact.html">Connect</a>
+          <div class="menu-separator"></div>
+          <custom-social-link name="Github" url="https://github.com/darksoil-studio"></custom-social-link>
+          <a href="https://darksoil.studio/p2p-shipyard/" class="dev-btn" target="_blank" rel="noopener" title="Developer Documentation">developer portal</a>
+        </div>
       </nav>
       <div class="mobile-menu-overlay">
         <button class="close-mobile-menu" aria-label="Close menu">&times;</button>
         <nav class="mobile-menu-content">
-          <a href="index.html">Home</a>
-          <a href="dash-chat.html">Dash Chat</a>
-          <a href="https://darksoil.studio/p2p-shipyard">p2p Shipyard</a>
-          <a href="corri.html">Corri AI</a>
-          <a href="bouy-os.html">Buoy</a>
+          <a href="index.html">darksoil studio</a>
+          <div class="dropdown">
+            <a href="#" class="dropdown-toggle">Projects ▾</a>
+            <div class="dropdown-menu">
+              <a href="dash-chat.html">Dash Chat</a>
+              <a href="corri.html">Corri AI</a>
+              <a href="https://darksoil.studio/p2p-shipyard">p2p Shipyard</a>
+              <a href="bouy-os.html">Buoy</a>
+            </div>
+          </div>
           <a href="contact.html">Connect</a>
-          <a href="https://darksoil.studio/p2p-shipyard/" class="dev-btn" target="_blank" rel="noopener" title="Developer Documentation">Dev</a>
+          <a href="https://darksoil.studio/p2p-shipyard/" class="dev-btn" target="_blank" rel="noopener" title="Developer Documentation">developer portal</a>
         </nav>
       </div>
     </header>
