--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
           <p style="text-align: center;">CTO</p>
         </rocket-card>
         <rocket-card>
-          <img src="viktor_bw.png" class="photo" />
+          <img src="viktor_bw_circle.png" class="photo" />
           <h4 slot="title">Viktor Zaunders</h4>
           <p style="text-align: center;">CFO</p>
         </rocket-card>
