--- a/dash-chat.html
+++ b/dash-chat.html
@@ -60,6 +60,15 @@
       <p>
         We're developing an offline-first, encrypted, peer-to-peer messaging app specifically designed for communities experiencing internet shutdowns, low connectivity, natural disasters, or unreliable network conditions.
       </p>
+      <form
+        action="https://submit-form.com/x8wivjMPt"
+        method="POST"
+        style="max-width: 400px; margin: 1em auto; display: flex; flex-direction: column; gap: 0.5em;"
+      >
+        <h4 style="margin: 0 0 0.5em 0; text-align: center;">Subscribe to Updates</h4>
+        <input type="email" id="email" name="email" required placeholder="Email*" style="padding: 0.5em; border: 1px solid #ccc; border-radius: 4px;">
+        <button type="submit" class="button" style="width: 100%;">Subscribe</button>
+      </form>
       <p>
         With authoritarianism and network interference increasing worldwide, secure and sovereign communication without dependence on stable internet is becoming essential yet remains a challenge.
       </p>
