--- a/bouy-os.html
+++ b/bouy-os.html
@@ -40,7 +40,7 @@
         <button class="close-mobile-menu" aria-label="Close menu">&times;</button>
         <nav class="mobile-menu-content">
           <a href="index.html">darksoil studio</a>
-          <div class="dropdown">
+          <div class="dropdown mobile-dropdown">
             <a href="#" class="dropdown-toggle">Projects ▾</a>
             <div class="dropdown-menu">
               <a href="dash-chat.html">Dash Chat</a>
@@ -148,17 +148,24 @@
         const dropdownToggle = document.querySelector('.dropdown-toggle');
         const dropdownMenu = document.querySelector('.dropdown-menu');
 
+        // Mobile dropdown
+        const mobileDropdown = document.querySelector('.mobile-dropdown');
+        const mobileDropdownToggle = mobileDropdown?.querySelector('.dropdown-toggle');
+        const mobileDropdownMenu = mobileDropdown?.querySelector('.dropdown-menu');
+
         // Hamburger opens overlay
         if (hamburger && mobileOverlay) {
           hamburger.addEventListener('click', () => {
             mobileOverlay.classList.add('open');
             hamburger.setAttribute('aria-expanded', true);
+            document.body.classList.add('mobile-menu-open');
           });
         }
         if (closeMobileMenu && mobileOverlay) {
           closeMobileMenu.addEventListener('click', () => {
             mobileOverlay.classList.remove('open');
             hamburger.setAttribute('aria-expanded', false);
+            document.body.classList.remove('mobile-menu-open');
           });
         }
         // Close overlay when clicking outside nav
@@ -166,8 +173,26 @@
           if (e.target === mobileOverlay) {
             mobileOverlay.classList.remove('open');
             hamburger.setAttribute('aria-expanded', false);
+            document.body.classList.remove('mobile-menu-open');
           }
         });
+
+        // Mobile dropdown logic
+        if (mobileDropdown && mobileDropdownToggle && mobileDropdownMenu) {
+          mobileDropdownToggle.addEventListener('click', (e) => {
+            e.preventDefault();
+            e.stopPropagation();
+            mobileDropdown.classList.toggle('open');
+          });
+          mobileDropdownMenu.querySelectorAll('a').forEach(link => {
+            link.addEventListener('click', () => {
+              mobileOverlay.classList.remove('open');
+              hamburger.setAttribute('aria-expanded', false);
+              document.body.classList.remove('mobile-menu-open');
+              mobileDropdown.classList.remove('open');
+            });
+          });
+        }
 
         // Desktop dropdown logic only
         if (dropdown && dropdownToggle && dropdownMenu) {
