Update website pages with latest changes

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="dropdown-menu">
               <a href="dash-chat.html">Dash Chat</a>
               <a href="corri.html">Corri AI</a>
-              <a href="https://darksoil.studio/p2p-shipyard">p2p Shipyard</a>
+              <a href="https://darksoil.studio/p2p-shipyard" target="_blank" rel="noopener">p2p Shipyard</a>
               <a href="bouy-os.html">Buoy</a>
             </div>
           </div>
@@ -43,7 +43,7 @@
             <div class="dropdown-menu">
               <a href="dash-chat.html">Dash Chat</a>
               <a href="corri.html">Corri AI</a>
-              <a href="https://darksoil.studio/p2p-shipyard">p2p Shipyard</a>
+              <a href="https://darksoil.studio/p2p-shipyard" target="_blank" rel="noopener">p2p Shipyard</a>
               <a href="bouy-os.html">Buoy</a>
             </div>
           </div>
@@ -97,7 +97,7 @@
               </p>
             </rocket-card>
           </a>
-          <a href="https://darksoil.studio/p2p-shipyard" class="project-card-link">
+          <a href="https://darksoil.studio/p2p-shipyard" class="project-card-link" target="_blank" rel="noopener">
             <rocket-card>
               <div slot="title" class="card-title">
                 <h4>p2p Shipyard</h4>
