--- a/bouy-os.html
+++ b/bouy-os.html
@@ -26,7 +26,7 @@
             <div class="dropdown-menu">
               <a href="dash-chat.html">Dash Chat</a>
               <a href="corri.html">Corri AI</a>
-              <a href="https://darksoil.studio/p2p-shipyard">p2p Shipyard</a>
+              <a href="https://darksoil.studio/p2p-shipyard" target="_blank" rel="noopener">p2p Shipyard</a>
               <a href="bouy-os.html">Buoy</a>
             </div>
           </div>
@@ -45,7 +45,7 @@
             <div class="dropdown-menu">
               <a href="dash-chat.html">Dash Chat</a>
               <a href="corri.html">Corri AI</a>
-              <a href="https://darksoil.studio/p2p-shipyard">p2p Shipyard</a>
+              <a href="https://darksoil.studio/p2p-shipyard" target="_blank" rel="noopener">p2p Shipyard</a>
               <a href="bouy-os.html">Buoy</a>
             </div>
           </div>
