--- a/corri.html
+++ b/corri.html
@@ -26,7 +26,7 @@
             <div class="dropdown-menu">
               <a href="dash-chat.html">Dash Chat</a>
               <a href="corri.html">Corri AI</a>
-              <a href="https://darksoil.studio/p2p-shipyard">p2p Shipyard</a>
+              <a href="https://darksoil.studio/p2p-shipyard" target="_blank" rel="noopener">p2p Shipyard</a>
               <a href="bouy-os.html">Buoy</a>
             </div>
           </div>
@@ -45,7 +45,7 @@
             <div class="dropdown-menu">
               <a href="dash-chat.html">Dash Chat</a>
               <a href="corri.html">Corri AI</a>
-              <a href="https://darksoil.studio/p2p-shipyard">p2p Shipyard</a>
+              <a href="https://darksoil.studio/p2p-shipyard" target="_blank" rel="noopener">p2p Shipyard</a>
               <a href="bouy-os.html">Buoy</a>
             </div>
           </div>
@@ -60,15 +60,7 @@
       <p>
         Community matchmaker.
       </p>
-      <form
-        action="https://submit-form.com/sNnBvx21l"
-        method="POST"
-        style="max-width: 400px; margin: 1em auto; display: flex; flex-direction: column; gap: 0.5em;"
-      >
-        <h4 style="margin: 0 0 0.5em 0; text-align: center;">Subscribe to Updates</h4>
-        <input type="email" id="subscribe-email" name="email" required placeholder="Email*" style="padding: 0.5em; border: 1px solid #ccc; border-radius: 4px;">
-        <button type="submit" class="button" style="width: 100%;">Subscribe</button>
-      </form>
+
       <p>
         Corri is a peer-to-peer, local-first AI matchmaking designed to help communities and events match needs, offers, and shared interests in real time. Whether it's conferences, teams, or residential communities, Corri connects people around ideas, resources, and opportunities—without centralized gatekeepers.<br><br>
         It's intelligent coordination for groups to discover and act on their potential.
