Dash Chat page: restructure content, add headings/icons, fix menu, redirect /p2pmessenger to Dash Chat; update styles and header links

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       </button>
       <nav class="menu-links">
         <div class="menu-left">
+          <a href="index.html" class="home-link">darksoil studio</a>
         </div>
         <div class="menu-right">
           <div class="dropdown">
