--- a/dash-chat.html
+++ b/dash-chat.html
@@ -5,6 +5,8 @@
       href="https://fonts.googleapis.com/css?family=Rubik"
       rel="stylesheet"
     />
+    <meta http-equiv="refresh" content="0; url=dashchat/" />
+    <link rel="canonical" href="dashchat/" />
     <link rel="stylesheet" href="style.css" />
     <title>Dash Chat - darksoil studio</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -24,7 +26,7 @@
           <div class="dropdown">
             <a href="#" class="dropdown-toggle">Projects ▾</a>
             <div class="dropdown-menu">
-              <a href="dash-chat.html">Dash Chat</a>
+              <a href="dashchat/">Dash Chat</a>
               <a href="corri.html">Corri AI</a>
               <a href="https://darksoil.studio/p2p-shipyard" target="_blank" rel="noopener">p2p Shipyard</a>
               <a href="bouy-os.html">Buoy</a>
@@ -42,7 +44,7 @@
           <div class="dropdown mobile-dropdown">
             <a href="#" class="dropdown-toggle">Projects ▾</a>
             <div class="dropdown-menu">
-              <a href="dash-chat.html">Dash Chat</a>
+              <a href="dashchat/">Dash Chat</a>
               <a href="corri.html">Corri AI</a>
               <a href="https://darksoil.studio/p2p-shipyard" target="_blank" rel="noopener">p2p Shipyard</a>
               <a href="bouy-os.html">Buoy</a>
