--- a/p2pmessenger/index.html
+++ b/p2pmessenger/index.html
@@ -2,16 +2,16 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <meta http-equiv="refresh" content="0; url=../dash-chat.html" />
-    <link rel="canonical" href="../dash-chat.html" />
+    <meta http-equiv="refresh" content="0; url=../dashchat/" />
+    <link rel="canonical" href="../dashchat/" />
     <title>Redirecting…</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script>
-      window.location.replace("../dash-chat.html");
+      window.location.replace("../dashchat/");
     </script>
   </head>
   <body>
-    <p>If you are not redirected automatically, follow this <a href="../dash-chat.html">link to Dash Chat</a>.</p>
+    <p>If you are not redirected automatically, follow this <a href="../dashchat/">link to Dash Chat</a>.</p>
   </body>
   </html>
 
