--- a/corri.html
+++ b/corri.html
@@ -24,7 +24,7 @@
           <div class="dropdown">
             <a href="#" class="dropdown-toggle">Projects ▾</a>
             <div class="dropdown-menu">
-              <a href="dash-chat.html">Dash Chat</a>
+              <a href="dashchat/">Dash Chat</a>
               <a href="corri.html">Corri AI</a>
               <a href="https://darksoil.studio/p2p-shipyard" target="_blank" rel="noopener">p2p Shipyard</a>
               <a href="bouy-os.html">Buoy</a>
@@ -43,7 +43,7 @@
           <div class="dropdown mobile-dropdown">
             <a href="#" class="dropdown-toggle">Projects ▾</a>
             <div class="dropdown-menu">
-              <a href="dash-chat.html">Dash Chat</a>
+              <a href="dashchat/">Dash Chat</a>
               <a href="corri.html">Corri AI</a>
               <a href="https://darksoil.studio/p2p-shipyard" target="_blank" rel="noopener">p2p Shipyard</a>
               <a href="bouy-os.html">Buoy</a>
