--- a/roadmap.html
+++ b/roadmap.html
@@ -27,7 +27,7 @@
       </button>
       <div class="menu-links">
         <a href="index.html">Home</a>
-        <a href="dash-chat.html">Dash Chat</a>
+        <a href="dashchat/">Dash Chat</a>
         <a href="https://darksoil.studio/p2p-shipyard" target="_blank" rel="noopener">p2p Shipyard</a>
         <a href="bouy-os.html">Bouy OS</a>
         <a href="roadmap.html">Roadmap</a>
