Fix import path for custom-social-link in /dashchat page

--- a/dashchat/index.html
+++ b/dashchat/index.html
@@ -252,7 +252,7 @@
       }
 
       registerCustomElements();
-      import "./custom-social-link.js";
+      import "../custom-social-link.js";
     </script>
     <script>
       document.addEventListener('DOMContentLoaded', () => {
