Restore primary path dash-chat.html and keep /dashchat as alt path; update links and dev entry

--- a/dash-chat.html
+++ b/dash-chat.html
@@ -5,8 +5,7 @@
       href="https://fonts.googleapis.com/css?family=Rubik"
       rel="stylesheet"
     />
-    <meta http-equiv="refresh" content="0; url=dashchat/" />
-    <link rel="canonical" href="dashchat/" />
+    <!-- No redirect: serve original page for production stability -->
     <link rel="stylesheet" href="style.css" />
     <title>Dash Chat - darksoil studio</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -26,7 +25,7 @@
           <div class="dropdown">
             <a href="#" class="dropdown-toggle">Projects ▾</a>
             <div class="dropdown-menu">
-              <a href="dashchat/">Dash Chat</a>
+              <a href="dash-chat.html">Dash Chat</a>
               <a href="corri.html">Corri AI</a>
               <a href="https://darksoil.studio/p2p-shipyard" target="_blank" rel="noopener">p2p Shipyard</a>
               <a href="bouy-os.html">Buoy</a>
@@ -44,7 +43,7 @@
           <div class="dropdown mobile-dropdown">
             <a href="#" class="dropdown-toggle">Projects ▾</a>
             <div class="dropdown-menu">
-              <a href="dashchat/">Dash Chat</a>
+              <a href="dash-chat.html">Dash Chat</a>
               <a href="corri.html">Corri AI</a>
               <a href="https://darksoil.studio/p2p-shipyard" target="_blank" rel="noopener">p2p Shipyard</a>
               <a href="bouy-os.html">Buoy</a>
