Update Jun role to UI/UX Design & Research across pages

--- a/dashchat/index.html
+++ b/dashchat/index.html
@@ -153,7 +153,7 @@
             </svg>
           </div>
           <div style="font-weight: 600;">Jun Nguyen</div>
-          <div style="font-size: 0.9em; color: #666;">User Research</div>
+          <div style="font-size: 0.9em; color: #666;">UI/UX Design & Research</div>
         </div>
         <div style="text-align: center;">
           <img src="viktor_bw_circle.png" alt="Viktor Zaunders" style="width: 120px; height: 120px; border-radius: 50%; object-fit: cover; display: block; margin: 0 auto 0.5em;" />
