--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@
       </button>
       <nav class="menu-links">
         <div class="menu-left">
-          <a href="index.html" class="home-link">darksoil studio</a>
+          <a href="/" class="home-link">darksoil studio</a>
         </div>
         <div class="menu-right">
           <div class="dropdown">
             <a href="#" class="dropdown-toggle">Projects ▾</a>
             <div class="dropdown-menu">
-              <a href="dash-chat.html">Dash Chat</a>
-              <a href="corri.html">Corri AI</a>
+              <a href="/dash-chat">Dash Chat</a>
+              <a href="/corri">Corri AI</a>
               <a href="https://darksoil.studio/p2p-shipyard" target="_blank" rel="noopener">p2p Shipyard</a>
-              <a href="bouy-os.html">Buoy</a>
+              <a href="/bouy-os">Buoy</a>
             </div>
           </div>
-          <a href="contact.html">Connect</a>
+          <a href="/contact">Connect</a>
           <div class="menu-separator"></div>
           <custom-social-link name="Github" url="https://github.com/darksoil-studio"></custom-social-link>
           <a href="https://darksoil.studio/p2p-shipyard/" class="dev-btn" target="_blank" rel="noopener" title="Developer Documentation">developer portal</a>
@@ -42,13 +42,13 @@
           <div class="dropdown mobile-dropdown">
             <a href="#" class="dropdown-toggle">Projects ▾</a>
             <div class="dropdown-menu">
-              <a href="dash-chat.html">Dash Chat</a>
-              <a href="corri.html">Corri AI</a>
+              <a href="/dash-chat">Dash Chat</a>
+              <a href="/corri">Corri AI</a>
               <a href="https://darksoil.studio/p2p-shipyard" target="_blank" rel="noopener">p2p Shipyard</a>
-              <a href="bouy-os.html">Buoy</a>
+              <a href="/bouy-os">Buoy</a>
             </div>
           </div>
-          <a href="contact.html">Connect</a>
+          <a href="/contact">Connect</a>
           <a href="https://darksoil.studio/p2p-shipyard/" class="dev-btn" target="_blank" rel="noopener" title="Developer Documentation">developer portal</a>
         </nav>
       </div>
@@ -72,7 +72,7 @@
       <h2 id="things-weve-made">Projects</h2>
 
       <rocket-columns>
-          <a href="dash-chat.html" class="project-card-link">
+          <a href="/dash-chat" class="project-card-link">
             <rocket-card>
               <div slot="title" class="card-title">
                 <h4>Dash Chat</h4>
@@ -84,7 +84,7 @@
               </p>
             </rocket-card>
           </a>
-          <a href="corri.html" class="project-card-link">
+          <a href="/corri" class="project-card-link">
             <rocket-card>
               <div slot="title" class="card-title">
                 <h4>Corri AI</h4>
@@ -172,6 +172,7 @@
 
       registerCustomElements();
       import "./custom-social-link.js";
+      import "./clean-urls.js";
     </script>
     <script>
       document.addEventListener('DOMContentLoaded', () => {
