--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <div class="dropdown">
             <a href="#" class="dropdown-toggle">Projects ▾</a>
             <div class="dropdown-menu">
-              <a href="/dash-chat">Dash Chat</a>
+              <a href="/dashchat">Dash Chat</a>
               <a href="/corri">Corri AI</a>
               <a href="https://darksoil.studio/p2p-shipyard" target="_blank" rel="noopener">p2p Shipyard</a>
               <a href="/bouy-os">Buoy</a>
@@ -42,7 +42,7 @@
           <div class="dropdown mobile-dropdown">
             <a href="#" class="dropdown-toggle">Projects ▾</a>
             <div class="dropdown-menu">
-              <a href="/dash-chat">Dash Chat</a>
+              <a href="/dashchat">Dash Chat</a>
               <a href="/corri">Corri AI</a>
               <a href="https://darksoil.studio/p2p-shipyard" target="_blank" rel="noopener">p2p Shipyard</a>
               <a href="/bouy-os">Buoy</a>
@@ -72,7 +72,7 @@
       <h2 id="things-weve-made">Projects</h2>
 
       <rocket-columns>
-          <a href="/dash-chat" class="project-card-link">
+          <a href="/dashchat" class="project-card-link">
             <rocket-card>
               <div slot="title" class="card-title">
                 <h4>Dash Chat</h4>
