--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
           <select id="subject" name="subject">
             <option value="">Select a topic</option>
             <option value="buoy">Buoy Project</option>
-            <option value="dash-chat">Dash Chat</option>
+            <option value="dashchat">Dash Chat</option>
             <option value="corri">Corri AI</option>
             <option value="p2p-shipyard">p2p Shipyard</option>
             <option value="collaboration">Collaboration</option>
