--- a/dashchat/index.html
+++ b/dashchat/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="style.css" />
     <title>Dash Chat - darksoil studio</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
   </head>
   <body>
     <header>
@@ -230,6 +231,7 @@
         <input type="email" id="email" name="email" required placeholder="Email*" style="padding: 0.5em; border: 1px solid #ccc; border-radius: 4px;">
         <input type="text" id="name" name="name" placeholder="Name (optional)" style="padding: 0.5em; border: 1px solid #ccc; border-radius: 4px;">
         <textarea id="interest" name="interest" placeholder="What's your interest in Dash Chat? (optional)" rows="4" style="padding: 0.5em; border: 1px solid #ccc; border-radius: 4px; resize: vertical; font-family: inherit;"></textarea>
+        <div class="g-recaptcha" data-sitekey="6LfXWbYrAAAAAA0JyvaevQVvn_5YCQIkLDJPOKoL"></div>
         <button type="submit" class="button" style="width: 100%;">Subscribe</button>
       </form>
     </rocket-content-area>
