--- a/dashchat/index.html
+++ b/dashchat/index.html
@@ -126,6 +126,235 @@
       <p>
         Dash Chat is built with end-to-end encryption and advanced security features to protect users' communications. We're implementing robust encryption protocols and security measures to ensure that messages remain private and secure, even in challenging network environments.
       </p>
+      
+      <div style="margin: 1.5em 0 0.5em 0; font-weight: 600;">Roadmap</div>
+      <div style="overflow-x: auto; -webkit-overflow-scrolling: touch; border: 1px solid #e5e7eb; border-radius: 8px; padding: 12px; background: #fff;">
+        <svg viewBox="0 0 1200 460" width="100%" height="auto" role="img" aria-label="Dash Chat roadmap">
+          <defs>
+            <style>
+              .rm-label { font: 12px 'Rubik', sans-serif; fill: #111; }
+              .rm-label-small { font: 11px 'Rubik', sans-serif; fill: #111; }
+              .rm-muted { fill: #6b7280; }
+              .rm-checked { fill: #065f46; }
+            </style>
+          </defs>
+          <!-- baseline -->
+          <line x1="60" y1="220" x2="1140" y2="220" stroke="#e5e7eb" stroke-width="4" />
+
+          <!-- major stages: Pre-Alpha, Alpha, Beta -->
+          <!-- Pre-Alpha -->
+          <line x1="180" y1="220" x2="180" y2="150" stroke="#1D4ED8" stroke-width="2" />
+          <circle cx="180" cy="220" r="9" fill="#1D4ED8" />
+          <g transform="translate(180,140) rotate(-24)">
+            <text class="rm-label" text-anchor="middle">Pre-Alpha — Now → you are here</text>
+          </g>
+
+          <!-- Alpha -->
+          <line x1="600" y1="220" x2="600" y2="150" stroke="#F59E0B" stroke-width="2" />
+          <circle cx="600" cy="220" r="9" fill="#F59E0B" />
+          <g transform="translate(600,140) rotate(-24)">
+            <text class="rm-label" text-anchor="middle">Alpha — early 2026</text>
+          </g>
+
+          <!-- Beta -->
+          <line x1="1000" y1="220" x2="1000" y2="150" stroke="#10B981" stroke-width="2" />
+          <circle cx="1000" cy="220" r="9" fill="#10B981" />
+          <g transform="translate(1000,140) rotate(-24)">
+            <text class="rm-label" text-anchor="middle">Beta — later 2026</text>
+          </g>
+
+          <!-- Pre-Alpha items (left cluster) -->
+          <!-- Checked items -->
+          <g>
+            <line x1="90" y1="220" x2="90" y2="260" stroke="#9ca3af" stroke-width="1.5" />
+            <circle cx="90" cy="220" r="4" fill="#059669" />
+            <g transform="translate(90,300) rotate(-24)">
+              <text class="rm-label-small rm-checked" text-anchor="middle">✓ Community needs assessment / User research / Contextual research</text>
+            </g>
+
+            <line x1="120" y1="220" x2="120" y2="260" stroke="#9ca3af" stroke-width="1.5" />
+            <circle cx="120" cy="220" r="4" fill="#059669" />
+            <g transform="translate(120,300) rotate(-24)">
+              <text class="rm-label-small rm-checked" text-anchor="middle">✓ Secure ephemeral relay service</text>
+            </g>
+
+            <line x1="150" y1="220" x2="150" y2="260" stroke="#9ca3af" stroke-width="1.5" />
+            <circle cx="150" cy="220" r="4" fill="#059669" />
+            <g transform="translate(150,300) rotate(-24)">
+              <text class="rm-label-small rm-checked" text-anchor="middle">✓ Push notifications</text>
+            </g>
+
+            <line x1="180" y1="220" x2="180" y2="260" stroke="#9ca3af" stroke-width="1.5" />
+            <circle cx="180" cy="220" r="4" fill="#059669" />
+            <g transform="translate(180,300) rotate(-24)">
+              <text class="rm-label-small rm-checked" text-anchor="middle">✓ p2p networking integration</text>
+            </g>
+
+            <line x1="210" y1="220" x2="210" y2="260" stroke="#9ca3af" stroke-width="1.5" />
+            <circle cx="210" cy="220" r="4" fill="#059669" />
+            <g transform="translate(210,300) rotate(-24)">
+              <text class="rm-label-small rm-checked" text-anchor="middle">✓ Linked devices</text>
+            </g>
+
+            <line x1="240" y1="220" x2="240" y2="260" stroke="#9ca3af" stroke-width="1.5" />
+            <circle cx="240" cy="220" r="4" fill="#059669" />
+            <g transform="translate(240,300) rotate(-24)">
+              <text class="rm-label-small rm-checked" text-anchor="middle">✓ Android, Mac, Linux, Windows</text>
+            </g>
+
+            <line x1="270" y1="220" x2="270" y2="260" stroke="#9ca3af" stroke-width="1.5" />
+            <circle cx="270" cy="220" r="4" fill="#059669" />
+            <g transform="translate(270,300) rotate(-24)">
+              <text class="rm-label-small rm-checked" text-anchor="middle">✓ Google Play Store (alpha)</text>
+            </g>
+
+            <!-- Upcoming in Pre-Alpha -->
+            <line x1="300" y1="220" x2="300" y2="260" stroke="#9ca3af" stroke-width="1.5" />
+            <circle cx="300" cy="220" r="4" fill="#374151" />
+            <g transform="translate(300,300) rotate(-24)">
+              <text class="rm-label-small" text-anchor="middle">UI/UX design</text>
+            </g>
+
+            <line x1="330" y1="220" x2="330" y2="260" stroke="#9ca3af" stroke-width="1.5" />
+            <circle cx="330" cy="220" r="4" fill="#374151" />
+            <g transform="translate(330,300) rotate(-24)">
+              <text class="rm-label-small" text-anchor="middle">Usability testing</text>
+            </g>
+
+            <line x1="360" y1="220" x2="360" y2="260" stroke="#9ca3af" stroke-width="1.5" />
+            <circle cx="360" cy="220" r="4" fill="#374151" />
+            <g transform="translate(360,300) rotate(-24)">
+              <text class="rm-label-small" text-anchor="middle">Visual identity</text>
+            </g>
+
+            <line x1="390" y1="220" x2="390" y2="260" stroke="#9ca3af" stroke-width="1.5" />
+            <circle cx="390" cy="220" r="4" fill="#374151" />
+            <g transform="translate(390,300) rotate(-24)">
+              <text class="rm-label-small" text-anchor="middle">Bluetooth</text>
+            </g>
+
+            <line x1="420" y1="220" x2="420" y2="260" stroke="#9ca3af" stroke-width="1.5" />
+            <circle cx="420" cy="220" r="4" fill="#374151" />
+            <g transform="translate(420,300) rotate(-24)">
+              <text class="rm-label-small" text-anchor="middle">iOS</text>
+            </g>
+
+            <line x1="450" y1="220" x2="450" y2="260" stroke="#9ca3af" stroke-width="1.5" />
+            <circle cx="450" cy="220" r="4" fill="#374151" />
+            <g transform="translate(450,300) rotate(-24)">
+              <text class="rm-label-small" text-anchor="middle">Group invite links</text>
+            </g>
+
+            <line x1="480" y1="220" x2="480" y2="260" stroke="#9ca3af" stroke-width="1.5" />
+            <circle cx="480" cy="220" r="4" fill="#374151" />
+            <g transform="translate(480,300) rotate(-24)">
+              <text class="rm-label-small" text-anchor="middle">Routing messages in/out of shutdown zones</text>
+            </g>
+          </g>
+
+          <!-- Alpha items (center cluster) -->
+          <g>
+            <line x1="540" y1="220" x2="540" y2="260" stroke="#9ca3af" stroke-width="1.5" />
+            <circle cx="540" cy="220" r="4" fill="#374151" />
+            <g transform="translate(540,300) rotate(-24)">
+              <text class="rm-label-small rm-muted" text-anchor="middle">Includes</text>
+            </g>
+
+            <line x1="570" y1="220" x2="570" y2="260" stroke="#9ca3af" stroke-width="1.5" />
+            <circle cx="570" cy="220" r="4" fill="#374151" />
+            <g transform="translate(570,300) rotate(-24)">
+              <text class="rm-label-small" text-anchor="middle">Bluetooth</text>
+            </g>
+
+            <line x1="600" y1="220" x2="600" y2="260" stroke="#9ca3af" stroke-width="1.5" />
+            <circle cx="600" cy="220" r="4" fill="#374151" />
+            <g transform="translate(600,300) rotate(-24)">
+              <text class="rm-label-small" text-anchor="middle">iOS</text>
+            </g>
+
+            <line x1="630" y1="220" x2="630" y2="260" stroke="#9ca3af" stroke-width="1.5" />
+            <circle cx="630" cy="220" r="4" fill="#374151" />
+            <g transform="translate(630,300) rotate(-24)">
+              <text class="rm-label-small" text-anchor="middle">Group invite links</text>
+            </g>
+
+            <line x1="660" y1="220" x2="660" y2="260" stroke="#9ca3af" stroke-width="1.5" />
+            <circle cx="660" cy="220" r="4" fill="#374151" />
+            <g transform="translate(660,300) rotate(-24)">
+              <text class="rm-label-small" text-anchor="middle">Routing messages in/out of shutdown zones</text>
+            </g>
+
+            <line x1="690" y1="220" x2="690" y2="260" stroke="#9ca3af" stroke-width="1.5" />
+            <circle cx="690" cy="220" r="4" fill="#374151" />
+            <g transform="translate(690,300) rotate(-24)">
+              <text class="rm-label-small" text-anchor="middle">UI/UX design</text>
+            </g>
+
+            <line x1="720" y1="220" x2="720" y2="260" stroke="#9ca3af" stroke-width="1.5" />
+            <circle cx="720" cy="220" r="4" fill="#374151" />
+            <g transform="translate(720,300) rotate(-24)">
+              <text class="rm-label-small" text-anchor="middle">Usability testing</text>
+            </g>
+
+            <line x1="750" y1="220" x2="750" y2="260" stroke="#9ca3af" stroke-width="1.5" />
+            <circle cx="750" cy="220" r="4" fill="#374151" />
+            <g transform="translate(750,300) rotate(-24)">
+              <text class="rm-label-small" text-anchor="middle">Visual identity</text>
+            </g>
+          </g>
+
+          <!-- Beta items (right cluster) -->
+          <g>
+            <line x1="940" y1="220" x2="940" y2="260" stroke="#9ca3af" stroke-width="1.5" />
+            <circle cx="940" cy="220" r="4" fill="#374151" />
+            <g transform="translate(940,300) rotate(-24)">
+              <text class="rm-label-small rm-muted" text-anchor="middle">Targets</text>
+            </g>
+
+            <line x1="970" y1="220" x2="970" y2="260" stroke="#9ca3af" stroke-width="1.5" />
+            <circle cx="970" cy="220" r="4" fill="#374151" />
+            <g transform="translate(970,300) rotate(-24)">
+              <text class="rm-label-small" text-anchor="middle">Raspberry Pi always-online nodes</text>
+            </g>
+
+            <line x1="1000" y1="220" x2="1000" y2="260" stroke="#9ca3af" stroke-width="1.5" />
+            <circle cx="1000" cy="220" r="4" fill="#374151" />
+            <g transform="translate(1000,300) rotate(-24)">
+              <text class="rm-label-small" text-anchor="middle">Emergency relay / Local mode</text>
+            </g>
+
+            <line x1="1030" y1="220" x2="1030" y2="260" stroke="#9ca3af" stroke-width="1.5" />
+            <circle cx="1030" cy="220" r="4" fill="#374151" />
+            <g transform="translate(1030,300) rotate(-24)">
+              <text class="rm-label-small" text-anchor="middle">Voice messages</text>
+            </g>
+
+            <line x1="1060" y1="220" x2="1060" y2="260" stroke="#9ca3af" stroke-width="1.5" />
+            <circle cx="1060" cy="220" r="4" fill="#374151" />
+            <g transform="translate(1060,300) rotate(-24)">
+              <text class="rm-label-small" text-anchor="middle">File sharing</text>
+            </g>
+
+            <line x1="1090" y1="220" x2="1090" y2="260" stroke="#9ca3af" stroke-width="1.5" />
+            <circle cx="1090" cy="220" r="4" fill="#374151" />
+            <g transform="translate(1090,300) rotate(-24)">
+              <text class="rm-label-small" text-anchor="middle">Security features (disappearing messages, hidden chats, etc.)</text>
+            </g>
+
+            <line x1="1120" y1="220" x2="1120" y2="260" stroke="#9ca3af" stroke-width="1.5" />
+            <circle cx="1120" cy="220" r="4" fill="#374151" />
+            <g transform="translate(1120,300) rotate(-24)">
+              <text class="rm-label-small" text-anchor="middle">Apple App Store</text>
+            </g>
+
+            <line x1="1150" y1="220" x2="1150" y2="260" stroke="#9ca3af" stroke-width="1.5" />
+            <circle cx="1150" cy="220" r="4" fill="#374151" />
+            <g transform="translate(1150,300) rotate(-24)">
+              <text class="rm-label-small" text-anchor="middle">Field usability testing (offline, secure backups, encryptions)</text>
+            </g>
+          </g>
+        </svg>
+      </div>
 
       <h3 style="font-family: 'Rubik', sans-serif; font-size: 1.3em; font-weight: 500; margin: 2em 0 1em 0; display: flex; align-items: center; gap: 0.5em;">
         <svg width="20" height="20" viewBox="0 0 20 20" aria-hidden="true" focusable="false">
