Roadmap: improve readability (larger fonts, thicker baseline, bigger milestone dots, halo on Pre-Alpha)

--- a/dashchat.html
+++ b/dashchat.html
@@ -89,33 +89,34 @@
         <svg viewBox="0 0 1200 460" width="100%" height="auto" role="img" aria-label="Dash Chat roadmap">
           <defs>
             <style>
-              .rm-label { font: 12px 'Rubik', sans-serif; fill: #111; }
-              .rm-label-small { font: 11px 'Rubik', sans-serif; fill: #111; }
+              .rm-label { font: 14px 'Rubik', sans-serif; fill: #111; }
+              .rm-label-small { font: 12.5px 'Rubik', sans-serif; fill: #111; }
               .rm-muted { fill: #6b7280; }
               .rm-checked { fill: #065f46; }
             </style>
           </defs>
           <!-- baseline -->
-          <line x1="60" y1="220" x2="1140" y2="220" stroke="#e5e7eb" stroke-width="4" />
+          <line x1="60" y1="220" x2="1140" y2="220" stroke="#d1d5db" stroke-width="5" />
 
           <!-- major stages: Pre-Alpha, Alpha, Beta -->
           <!-- Pre-Alpha -->
           <line x1="180" y1="220" x2="180" y2="150" stroke="#1D4ED8" stroke-width="2" />
-          <circle cx="180" cy="220" r="9" fill="#1D4ED8" />
+          <circle cx="180" cy="220" r="18" fill="none" stroke="#1D4ED8" stroke-width="6" opacity="0.15" />
+          <circle cx="180" cy="220" r="11" fill="#1D4ED8" />
           <g transform="translate(180,140) rotate(-24)">
             <text class="rm-label" text-anchor="middle">Pre-Alpha — Now → you are here</text>
           </g>
 
           <!-- Alpha -->
           <line x1="600" y1="220" x2="600" y2="150" stroke="#F59E0B" stroke-width="2" />
-          <circle cx="600" cy="220" r="9" fill="#F59E0B" />
+          <circle cx="600" cy="220" r="11" fill="#F59E0B" />
           <g transform="translate(600,140) rotate(-24)">
             <text class="rm-label" text-anchor="middle">Alpha — early 2026</text>
           </g>
 
           <!-- Beta -->
           <line x1="1000" y1="220" x2="1000" y2="150" stroke="#10B981" stroke-width="2" />
-          <circle cx="1000" cy="220" r="9" fill="#10B981" />
+          <circle cx="1000" cy="220" r="11" fill="#10B981" />
           <g transform="translate(1000,140) rotate(-24)">
             <text class="rm-label" text-anchor="middle">Beta — later 2026</text>
           </g>
